--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
 <body>
 
 <div class="miler">
-    <div class="container">   
-     <section class="row">
-    <article class="col-xs-1  col-sm-2 col-md-2 col-lg-1">
-<img src="img/gaceta.png">
+    <div class="container-fluid">   
+    <section class="row">
+    <article class="col-xs-1  col-sm-1 col-md-2 col-lg-1">
+    <img src="img/gaceta1.png">
      </article>
 
-     <miler class="col-xs-11  col-sm-10 col-md-10 col-lg-11">
+     <miler class="col-xs-11  col-sm-11 col-md-10 col-lg-11">
      <h2><script src="js/fecha.js"></script></h2>
-
-
-        <hr style="width:100%;height:7px;background-color:rgba(170, 1, 1, 0.856);">
+     <hr style="width:100%;height:7px;background-color:rgba(170, 1, 1, 0.856);">
      </miler>  
 </div>
 </div> 
