--- a/index.html
+++ b/index.html
@@ -31,18 +31,19 @@
  
 <div class="container">
     <section class="main row">
-        <article class="col-xs-12 col-sm-8 col-md-9 col-lg-9">
+        <article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
              <h1>EL</h1>
              <h1>GACETIS</h1>
-             <h1>167</h1>
-
+             <h1>167 </h1>
         </article>
-        <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3">
-            <h3>Orgullosamente Tuzos</h3>  
-        </div>
+        <div class="row">
+
+             <h4>
+Orgullosamente Tuzos
+             </h4> 
    </section>
    <div class="row"></div> 
-   <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3"></div>
+   <div class="col-xs-12 "></div>
    <h1>Comunidad Estudiantil</h1>    
 
    <div class="row">
