--- a/index.html
+++ b/index.html
@@ -35,21 +35,19 @@
              <h1>EL</h1>
              <h1>GACETIS</h1>
              <h1>167 </h1>
-        </article>
-        <div class="row">
+             <h4> Orgullosamente Tuzos </h4>
 
-             <h4>
-Orgullosamente Tuzos
-             </h4> 
+
+        </article>
    </section>
    <div class="row"></div> 
    <div class="col-xs-12 "></div>
    <h1>Comunidad Estudiantil</h1>    
 
    <div class="row">
-       <div class="color1 col-xs-12 col-sm-6 col-md-3 ">
+       <div class="color1 col-xs-12 col-sm-3 col-md-3 ">
         <h3>
-            Columna
+            noticias
         </h3>   
              <p> 
                 Todo el mundo te dice lo que es mejor para ti. No quieren que busques 
@@ -57,37 +55,18 @@ Orgullosamente Tuzos
                 exterior y empieza a buscarla por ti mismo en tu interior.
              </p> 
 </div>
-        <div class=" col-xs-12 col-sm-6 col-md-3">
+        <div class=" col-xs-12 col-sm-9 col-md-9">
             <h3>
-                Columna
+                Carusel
             </h3>
             <p>         
                 Todo el mundo te dice lo que es mejor para ti. No quieren que busques 
                 respuestas sino que creas las suyas. Deja de coleccionar información del
-                exterior y empieza a buscarla por ti mismo en tu interior.
+                exterior y empieza a buscarla por ti mismo en tu interior.br
               </p> 
          </div> 
 
-         <div class="color1 col-xs-12 col-sm-6 col-md-3">
-            <h3>
-                Columna
-            </h3>
-            <p>
-                Todo el mundo te dice lo que es mejor para ti. No quieren que busques 
-                respuestas sino que creas las suyas. Deja de coleccionar información del
-                exterior y empieza a buscarla por ti mismo en tu interior.
-              </p> 
-         </div>
-         <div class=" col-xs-12 col-sm-6 col-md-3">
-            <h3>
-                Columna
-          </h3>
-            <p>        
-              Todo el mundo te dice lo que es mejor para ti. No quieren que busques 
-                respuestas sino que creas las suyas. Deja de coleccionar información del
-                exterior y empieza a buscarla por ti mismo en tu interior.
-              </p> 
-         </div>
+
    </div>
 </div>
 <footer>
